--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -30,3 +30,7 @@ img.consecutive {
         #chat-container .row .basic {
             padding-bottom: 0 !important;
         }
+
+.full-height {
+    height: 100vh !important;
+}
